--- a/src/main/resources/com/neuedu/nep/hello-fxml.fxml
+++ b/src/main/resources/com/neuedu/nep/hello-fxml.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.neuedu.nep.controller.HelloCotroller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.HelloCotroller">
+   <children>
+      <VBox alignment="BOTTOM_CENTER" minWidth="200" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="510.0" text="NEU EDUCATION" textAlignment="CENTER">
+                     <font>
+                        <Font size="22.0" />
+                     </font></Label>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
+            <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="loginButton" mnemonicParsing="false" onMouseClicked="#loginButtonClicked" prefHeight="40.0" prefWidth="75.0" text="LOG IN" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="113.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="registerButton" mnemonicParsing="false" onMouseClicked="#registerButtonClicked" prefHeight="40.0" prefWidth="75.0" text="REGISTER" />
+               </children>
+            </HBox>
+         </children></VBox>
+   </children>
 </AnchorPane>
