提交7:蜡笔小新UI

--- a/src/main/resources/com/neuedu/nep/logInWindow.fxml
+++ b/src/main/resources/com/neuedu/nep/logInWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.LogInController">
+<AnchorPane fx:id="paneRoot1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.LogInController">
          <children>
             <HBox alignment="CENTER" layoutX="2.0" layoutY="69.0" prefHeight="59.0" prefWidth="600.0" spacing="20">
                <children>
