--- a/src/main/resources/com/neuedu/nep/registerWindow.fxml
+++ b/src/main/resources/com/neuedu/nep/registerWindow.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.RegisterController">
+<AnchorPane fx:id="paneRoot2" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.RegisterController">
    <children>
       <HBox alignment="CENTER" layoutY="42.0" prefHeight="66.0" prefWidth="600.0" spacing="20">
          <children>
