提交10：完善administrator完毕

--- a/src/main/resources/com/neuedu/nep/aqi.css
+++ b/src/main/resources/com/neuedu/nep/aqi.css
@@ -191,3 +191,8 @@
 .form-container {
     -fx-spacing: 10px;
 }
+/* 树视图整体样式 */
+.tree-view {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
