--- a/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
+++ b/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -7,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="683.0" prefWidth="954.0" stylesheets="@aqi.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.AdministratorController">
+<AnchorPane fx:id="admPaneRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="683.0" prefWidth="954.0" stylesheets="@aqi.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.AdministratorController">
    <children>
       <TabPane prefHeight="683.0" prefWidth="954.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
@@ -15,9 +17,14 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="609.0">
                      <children>
-                        <TreeView editable="true" layoutX="14.0" layoutY="25.0" prefHeight="292.0" prefWidth="555.0" styleClass="vbox" />
-                        <TreeView editable="true" layoutX="14.0" layoutY="328.0" prefHeight="292.0" prefWidth="555.0" styleClass="vbox" />
-                        <Label layoutX="698.0" layoutY="5.0" text="Label" />
+                        <TreeView fx:id="departmentText" editable="true" layoutX="14.0" layoutY="62.0" prefHeight="560.0" prefWidth="625.0" styleClass="tree-item" />
+                        <ImageView fitHeight="194.0" fitWidth="200.0" layoutX="680.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../image/xiaoxin.jpg" />
+                           </image>
+                        </ImageView>
+                        <Label fx:id="wordsText" layoutX="680.0" layoutY="233.0" prefHeight="155.0" prefWidth="197.0" textAlignment="JUSTIFY" wrapText="true" />
+                        <Label fx:id="timeText" alignment="CENTER" layoutX="91.0" layoutY="25.0" prefHeight="29.0" prefWidth="540.0" textAlignment="CENTER" />
                      </children></AnchorPane>
                </content>
             </Tab>
