--- a/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
+++ b/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
@@ -45,7 +45,7 @@
                                  <children>
                                     <Button fx:id="queryButton" prefHeight="31.0" prefWidth="72.0" text="查询" />
                                     <HBox prefHeight="100.0" prefWidth="200.0" />
-                                    <Button fx:id="backButton" mnemonicParsing="false" text="返回" />
+                                    <Button fx:id="backButton" mnemonicParsing="false" text="刷新" />
                                  </children>
                               </HBox>
                            </children>
