--- a/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
+++ b/src/main/resources/com/neuedu/nep/aqiReportAssign.fxml
@@ -25,7 +25,8 @@
                         </ImageView>
                         <Label fx:id="wordsText" layoutX="680.0" layoutY="233.0" prefHeight="155.0" prefWidth="197.0" textAlignment="JUSTIFY" wrapText="true" />
                         <Label fx:id="timeText" alignment="CENTER" layoutX="91.0" layoutY="25.0" prefHeight="29.0" prefWidth="540.0" textAlignment="CENTER" />
-                        <Button fx:id="flushButton" layoutX="639.0" layoutY="585.0" mnemonicParsing="false" text="刷新" />
+                        <Button fx:id="flushButton" layoutX="639.0" layoutY="585.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="61.0" text="刷新" />
+                        <Button fx:id="deleteButton" layoutX="635.0" layoutY="525.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="61.0" text="删除" />
                      </children></AnchorPane>
                </content>
             </Tab>
