--- a/src/main/resources/com/neuedu/nep/hello-fxml.fxml
+++ b/src/main/resources/com/neuedu/nep/hello-fxml.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="paneRoot" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.HelloCotroller" >
+<AnchorPane fx:id="paneRoot" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.neuedu.nep.controller.HelloCotroller">
    <children>
-      <VBox alignment="BOTTOM_CENTER" minWidth="200" prefHeight="300.0" prefWidth="600.0" spacing="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
+      <VBox alignment="BOTTOM_CENTER" minWidth="200" prefHeight="300.0" prefWidth="600.0" spacing="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
@@ -41,7 +41,7 @@
             </HBox>
             <VBox alignment="CENTER" prefHeight="53.0" prefWidth="800.0">
                <children>
-                  <Button fx:id="registerButton" mnemonicParsing="false" onMouseClicked="#registerButtonClicked" prefHeight="34.0" prefWidth="88.0" text="REGISTER" textAlignment="CENTER">
+                  <Button fx:id="registerButton" mnemonicParsing="false" onMouseClicked="#registerButtonClicked" prefHeight="34.0" prefWidth="88.0" text="注册" textAlignment="CENTER">
                      <textFill>
                         <RadialGradient centerX="0.4888888888888889" centerY="0.48571428571428577" radius="0.5">
                            <stops>
@@ -54,12 +54,12 @@
                      </textFill></Button>
                </children>
             </VBox>
-            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" AnchorPane.topAnchor="0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" AnchorPane.topAnchor="0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
                <children>
-                  <Button fx:id="loginButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#loginButtonClicked" prefHeight="34.0" prefWidth="88.0" text="LOG IN" textAlignment="CENTER">
+                  <Button fx:id="loginButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#loginButtonClicked" prefHeight="34.0" prefWidth="88.0" text="登录" textAlignment="CENTER">
                      <textFill>
                         <RadialGradient centerX="0.4888888888888889" centerY="0.48571428571428577" radius="0.5">
                            <stops>
@@ -74,9 +74,24 @@
                   </Button>
                </children>
             </HBox>
-            <HBox alignment="TOP_CENTER" prefHeight="113.0" prefWidth="600.0">
+            <HBox alignment="TOP_CENTER" prefHeight="118.0" prefWidth="800.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="113.0" prefWidth="182.0" />
+                  <VBox alignment="TOP_CENTER" prefHeight="113.0" prefWidth="182.0">
+                     <children>
+                        <Button fx:id="viewButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#handleView" prefHeight="34.0" prefWidth="124.0" text="整体AQI监控" textAlignment="CENTER">
+                           <textFill>
+                              <RadialGradient centerX="0.4888888888888889" centerY="0.48571428571428577" radius="0.5">
+                                 <stops>
+                                    <Stop color="#431818" />
+                                    <Stop color="#431818" offset="0.00749063670411985" />
+                                    <Stop color="#7c74e4" offset="0.33707865168539325" />
+                                    <Stop color="BLACK" offset="0.7602996254681648" />
+                                    <Stop color="#ff0909" offset="1.0" />
+                                 </stops>
+                              </RadialGradient>
+                           </textFill>
+                        </Button>
+                     </children></VBox>
                </children>
             </HBox>
          </children></VBox>
